# cream

./: .cursorrules  .gitignore  LICENSE  README.md  app.py  magic.py  package-lock.json  pyproject.toml
cream_modal/: .gitignore  README.md  app.py  prompt_snippets.txt  pyproject.toml  sandbox.py  sandbox2.py
cream_modal/examples/: compare_processors.py  generate_lightning.py
cream_modal/src/: constants.py  diffusion_pipeline.py  diffusion_processor.py  lightning_diffusion.py  standard_diffusion.py
cream_modal/src/utils/: logger.py
cream_modal/tests/src/: test_lightning.py
modal_magic/: app.py  app2.py  prompt_snippets.txt  pyproject.toml
modal_magic/src/: magic.py  sandbox.py
webapp/: .cursorrules  README.md  next.config.ts  package-lock.json  package.json  server.js
webapp/public/: runtime-error-handler.js
webapp/public/favicon/: site.webmanifest
webapp/src/: middleware.ts
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/admin/: page.tsx
webapp/src/app/api/websocket/: route.ts
webapp/src/app/auth/callback/: route.ts
webapp/src/app/auth/login/: page.tsx
webapp/src/app/broadcast/: page.tsx
webapp/src/app/components/: WatchStreamForm.tsx
webapp/src/app/legal/: page.tsx
webapp/src/app/pricing/: page.tsx
webapp/src/app/profile/: actions.ts  client.tsx  page.tsx
webapp/src/app/stream/: page.tsx
webapp/src/components/: AdminDebug.tsx  ErrorBoundary.tsx  ErrorBoundaryWrapper.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  TransformationExamples.tsx  UseCasesSection.tsx
webapp/src/components/auth/: ProfileForm.tsx  SignupForm.tsx
webapp/src/components/credits/: CreditsDisplay.tsx
webapp/src/components/legal/: Impressum.tsx  PrivacyPolicy.tsx  TermsAndConditions.tsx
webapp/src/components/stream/: StreamHistory.tsx
webapp/src/components/ui/: button.tsx  card.tsx
webapp/src/context/: AuthContext.tsx
webapp/src/lib/: config.ts  supabase.ts  websocket.ts
webapp/src/utils/: formatters.ts  stripe.ts
webapp/src/utils/supabase/: server.ts  stored-procedures.sql
websocket-server/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  server.js  server.ts  tsconfig.json
(+4 files in other folders)
