[project]
name = "cream"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominique Paul",email = "dominique.c.a.paul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal (>=0.73.116,<0.74.0)",
    "diffusers (>=0.32.2,<0.33.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
