[project]
name = "cream"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominique Paul",email = "dominique.c.a.paul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal (>=0.73.116,<0.74.0)",
    "diffusers (>=0.32.2,<0.33.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.50.0,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "accelerate (>=1.5.2,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.0.2"
ipykernel = "^6.29.5"
iprogress = "^0.4"
matplotlib = "^3.10.1"

[tool.poetry]
package-mode = false 